--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.2.8",
     "i18next": "^25.6.0",
     "i18next-http-backend": "^3.0.2",
     "next": "15.5.4",
+    "pretendard": "^1.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^16.0.0"
@@ -22,9 +24,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
