--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fontsource/montserrat": "^5.2.8",
     "i18next": "^25.6.0",
     "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "pretendard": "^1.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^16.0.0"
+    "react-i18next": "^16.0.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
